Sorting out some mobile layout issues

--- a/src/assets/scss/custom.scss
+++ b/src/assets/scss/custom.scss
@@ -2,6 +2,11 @@
   display: none !important;
 }
 
+html {
+  font-size: 1rem;
+  height: 100%;
+}
+
 body{
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -9,8 +14,5 @@ body{
   font-weight: 400;
   line-height: 1.5;
   text-align: left;
-}
-
-html {
-  font-size: 1rem;
+  height: 100%;
 }
